--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "date-fns": "^4.1.0",
     "next": "16.1.6",
     "react": "19.2.3",
